--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Science Gear",
   "license": "ISC",
   "dependencies": {
     "@discordjs/builders": "^1.6.5",
@@ -17,6 +17,7 @@
     "cookie-parser": "^1.4.6",
     "discord-api-types": "^0.37.56",
     "discord.js": "^13.16.0",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "node-fetch": "^3.2.6"
